@@ -15,6 +15,7 @@
 	<description>Enterprise Resource Allocation and Skill Management System</description>
 	<properties>
 		<java.version>21</java.version>
+		<argLine>-XX:+EnableDynamicAgentLoading</argLine>
 	</properties>
 	<dependencies>
 		<!-- Spring Web -->
@@ -198,20 +199,9 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>properties</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<argLine>@{argLine} -javaagent:${org.mockito:mockito-core:jar}</argLine>
+					<argLine>@{argLine}</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
